=== What's New in 2.5 Since 2.4

This section covers the changes made from version 2.4 to version 2.5.
For changes in earlier version, see <<history>>.

Also see <<new-in-sik>>.

[[x25-delivery]]
==== Delivery Attempts Header

There is now an option to to add a header which tracks delivery attempts when using certain error handlers and after rollback processors.
See <<delivery-header>> for more information.

[[x25-message-return]]
==== @KafkaListener Changes

Default reply headers will now be populated automatically if needed when a `@KafkaListener` return type is `Message<?>`.
See <<reply-message>> for more information.

The `KafkaHeaders.RECEIVED_MESSAGE_KEY` is no longer populated with a `null` value when the incoming record has a `null` key; the header is omitted altogether.

[[x25-container]]
==== Listener Container Changes

The `assignmentCommitOption` container property is now `LATEST_ONLY_NO_TX` by default.
See <<container-props>> for more information.

The `subBatchPerPartition` container property is now `true` by default when using transactions.
See <<transactions>> for more information.

[[x25-template]]
==== KafkaTemplate Changes

The `KafkaTemplate` can now maintain micrometer timers.
See <<micrometer>> for more information.

The `KafkaTemplate` can now be configured with `ProducerConfig` properties to override those in the producer factory.
See <<kafka-template>> for more information.

[[x25-testing]]
==== Testing Changes

The `KafkaTestUtils.consumerProps()` helper record now sets `ConsumerConfig.AUTO_OFFSET_RESET_CONFIG` to `earliest` by default.
See <<junit>> for more information.